--- a/app/views/layouts/_alert.haml
+++ b/app/views/layouts/_alert.haml
@@ -1,4 +1,6 @@
 .alert.alert-success{:role => "alert"}
+  %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
+    %span{"aria-hidden" => "true"} ×
   %strong Well done!
   You have successfully sent a message.
   Please click
